--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,10 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  paths: 
 
+    - 'program.py' 
+ 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -25,12 +28,26 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Set up Python 3.8 
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
+      uses: actions/setup-python@v2 
+
+      with: 
+
+        python-version: 3.8 
+
+    - name: Install dependencies 
+
+      run: | 
+
+        python -m pip install --upgrade pip 
+
+        pip install pylint 
+
+     - name: Lint with pylint 
+
+      run: | 
+
+
+        python program.py
           echo test, and deploy your project.
