--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,31 +23,18 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+steps:
+- uses: actions/checkout@v3
+- name: Set up Python
+  uses: actions/setup-python@v4
+  with:
+    python-version: '3.x'
+- name: Install dependencies
+  run: |
+    python -m pip install --upgrade pip
+    pip install -r requirements.txt
+- name: Test with pytest
+  run: |
+    pip install pytest pytest-cov
+    pytest pyprog.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
 
-      - name: Set up Python 3.8 
-
-      uses: actions/setup-python@v2 
-
-      with: 
-
-        python-version: 3.8 
-
-    - name: Install dependencies 
-
-      run: | 
-
-        python -m pip install --upgrade pip 
-
-        pip install pylint 
-
-     - name: Lint with pylint 
-
-      run: | 
-
-
-        python3 program.py
-          echo test, and deploy your project.
