--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
 # Controls when the workflow will run
@@ -9,18 +7,13 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  paths: 
-
-    - 'program.py' 
+  
  
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  
   build:
-    # The type of runner that the job will run on
+  
     runs-on: ubuntu-latest
 
 steps:
@@ -36,5 +29,4 @@ steps:
 - name: Test with pytest
   run: |
     pip install pytest pytest-cov
-    pytest pyprog.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
-
+    python3 program.py 
