--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,5 +27,5 @@ jobs:
         pip install pytest
     - name: Run Tests
       run: | 
-         python3 Pyprog.py
+         python3 Pyprog.py newprog.py
        
